Added example in browser

--- a/examples/www/index.html
+++ b/examples/www/index.html
@@ -6,6 +6,16 @@
   </head>
   <body>
     <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
+    <h1>Testing WASM library</h1>
+    <br/>
+    <h3>Transaction</h3>
+    <p style="white-space: pre-line;" id="transaction"></p>
+    <h3>Root private key (Do not use!)</h3>
+    <p id="private_key"></p>
+    <h3>Signature</h3>
+    <p id="signature"></p>
+    <h3>Verify signature</h3>
+    <p id="verify"></p>
     <script src="./bootstrap.js"></script>
   </body>
 </html>
