--- a/examples/www/index.html
+++ b/examples/www/index.html
@@ -11,7 +11,7 @@
     <h3>Transaction</h3>
     <p style="white-space: pre-line;" id="transaction"></p>
     <h3>Root private key (Do not use!)</h3>
-    <p id="private_key"></p>
+    <p id="PRIVATE_KEY"></p>
     <h3>Signature</h3>
     <p id="signature"></p>
     <h3>Verify signature</h3>
