--- a/examples/www/index.html
+++ b/examples/www/index.html
@@ -1,21 +1,32 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="en">
+<head>
     <meta charset="utf-8">
     <title>Testing WASM library</title>
-  </head>
-  <body>
-    <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
-    <h1>Testing WASM library</h1>
-    <br/>
-    <h3>Transaction</h3>
-    <p style="white-space: pre-line;" id="transaction"></p>
-    <h3>Root private key (Do not use!)</h3>
-    <p id="PRIVATE_KEY"></p>
-    <h3>Signature</h3>
-    <p id="signature"></p>
-    <h3>Verify signature</h3>
-    <p id="verify"></p>
-    <script src="./bootstrap.js"></script>
-  </body>
+</head>
+<body>
+<style type="text/css">
+    h1 {
+        color: rgba(0, 0, 0, 1);
+        font-family: "Arial", sans-serif
+    }
+
+    h2 {
+      color: rgb(2, 131, 181);
+      font-family: "Arial", sans-serif
+    }
+
+    pre {
+        color: rgba(255, 255, 255, 0.9);
+        background-color: #000000;
+        padding: 20px;
+    }
+</style>
+
+<script src="./bootstrap.js"></script>
+<noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
+
+<h1>Zondax - Filecoin Signing Library Examples (WASM)</h1>
+<pre id="output"></pre>
+</body>
 </html>
