apply+unify prettier

--- a/examples/wasm_browser/index.html
+++ b/examples/wasm_browser/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 <head>
-    <meta charset="utf-8">
-    <title>Testing WASM library</title>
+  <meta charset='utf-8'>
+  <title>Testing WASM library</title>
 </head>
 <body>
-<style type="text/css">
+<style type='text/css'>
     h1 {
         color: rgba(0, 0, 0, 1);
         font-family: "Arial", sans-serif
     }
 
     h2 {
-      color: rgb(2, 131, 181);
-      font-family: "Arial", sans-serif
+        color: rgb(2, 131, 181);
+        font-family: "Arial", sans-serif
     }
 
     pre {
@@ -23,10 +23,10 @@
     }
 </style>
 
-<script src="./bootstrap.js"></script>
+<script src='./bootstrap.js'></script>
 <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
 
 <h1>Zondax - Filecoin Signing Library Examples (WASM)</h1>
-<pre id="output"></pre>
+<pre id='output'></pre>
 </body>
 </html>
